--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
             <h3>MAHOGANY </h3>
             <p>MODEL MANAGEMENT</p>
 
-            <div class="col-sm-6 sx-12 offset-md-4">
+            <div class="col-sm-6 sx-12 offset-md-3">
                 <nav class="navbar navbar-expand-lg navbar-light bg-transparent mb-4">
                     <div class="container-fluid">
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,23 +25,23 @@
                       </button>
                       <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
-                           <li><i class="fas fa-bars"></i></li> 
+                           <li><i class="fas fa-bars text-dark mt-2 "></i></li> 
                           <li class="nav-item">
-                            <a class="nav-link me-2" aria-current="page" href="#">WOMEN</a>
+                            <a class="nav-link me-2 ms-2" aria-current="page" href="#">WOMEN</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link me-2" href="#">NEW FACES</a>
+                            <a class="nav-link" href="#">NEW FACES</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link me-2" href="#">MEN</a>
+                            <a class="nav-link me-2 ms-2" href="#">MEN</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link me-2" href="#">BECOME A MODEL</a>
+                            <a class="nav-link" href="#">BECOME A MODEL</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link me-2" href="#">CONTACT US</a>
                           </li>
-                          <li><i class="fas fa-search"></i></li>
+                          <li><i class="fas fa-search mt-2"></i></li>
                         </ul>
                       </div>
                     </div>
@@ -55,7 +56,7 @@
                 <h2>Anna Fresco</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lectus egestas in sit felis. Justo sed nunc interdum faucibus mi potenti bibendum et. Orci quis ante dui.</p>
             </div>
-            <div class="col mt-5">
+            <div class="col mt-5 ms-7">
                 <img src="img/Rectangle 55.png" alt="" class="img-fluid col-md-8 ps-5">
             </div>
         </div>
@@ -63,7 +64,7 @@
 
     <div class="container-fluid bg-primary">
         <div class="row py-5 text-white">
-            <h5>Body Status</h5>
+            <h5 class="mb-3">Body Status</h5>
             <div class="col">
                 <p>Height 1.67m</p> 
             </div>
@@ -88,8 +89,8 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="row">
+    <div class="container py-5">
+        <div class="row mb-4">
             <div class="col">
                 <img src="img/Rectangle 56.png" alt="" class="img-fluid">
             </div>
@@ -110,8 +111,73 @@
             <div class="col">
                 <img src="img/Rectangle 57.png" alt="" class="img-fluid">
             </div>
+           
+        </div>
+        <button class="btn btn-primary col-sm-2 offset-md-5 mt-5 py-3 btn-primary btn-outline-secondary text-white" type="submit">Book Model</button>
+    </div>
+
+    <div class="container-fluid bg-secondary py-5">
+        <div class="row">
+            <ul class="nav justify-content-center ">
+                <li class="nav-item ">
+                  <a class="nav-link active dark-link" aria-current="page" href="#">LONDON</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link dark-link mx-5" href="#">LAGOS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link dark-link" href="#">AFRICA</a>
+                </li>
         </div>
     </div>
+
+    <div class="container-fluid bg-primary">
+        <div class="row text-white py-5 ">
+          <div class="col ms-6">
+            <ul class="footer-link p-0">
+              <li>HOME</li>
+              <li>WOMEN</li>
+              <li>NEW FACES</li>
+              <li>MEN</li>
+            </ul>
+          </div>
+          <div class="col">
+            <ul class="footer-link p-0 ">
+              <li>ABOUT</li>
+              <li>NEWS</li>
+              <li>CONTACT US</li>
+              <li>BECOME A MODEL</li>
+            </ul>
+          </div>
+          <div class="col">
+            <ul class="footer-link p-0">
+              <li>TERMS & CONDITION</li>
+              <li>PRIVACY POLICY</li>
+            </ul>
+          </div>
+          <div class="col ms-5">
+                <p>FOLLOW US</p>
+                <ul class="footer-link p-0">
+                <li><i class="fab fa-instagram me-2"></i>LONDON</li>
+                <li><i class="fab fa-instagram me-2"></i>LAGOS</li>
+                <li><i class="fab fa-instagram me-2"></i>AFRICA</li>
+                </ul>
+          </div>
+          <div class="col">
+            <ul class="footer-link p-0">
+              <li><i class="fas fa-arrow-up fa-3x text-primary"></i></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid bg-primary">
+        <div class="row">
+          <div class="col text-white ms-6">
+            <p>Copyright 2021 All Rights Reserved © Mahogany Model Management</p>
+          </div>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
