--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -36,7 +39,7 @@
                             <a class="nav-link me-2 ms-2" href="#">MEN</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">BECOME A MODEL</a>
+                            <a class="nav-link text-primary" href="#">BECOME A MODEL</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link me-2" href="#">CONTACT US</a>
@@ -53,8 +56,15 @@
     <div class="container-fluid">
         <div class="row mb-5 px-5">
             <div class="col mt-5 pe-5">
+                <p>1.8k <i class="fab fa-instagram fa-lg"></i></p>
                 <h2>Anna Fresco</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lectus egestas in sit felis. Justo sed nunc interdum faucibus mi potenti bibendum et. Orci quis ante dui.</p>
+                <div class="d-flex">
+                    <button class="btn btn-primary col-sm-3 mt-3 btn-primary btn-outline-secondary text-white" type="submit">Book Model</button>
+                    <ul>
+                        <li class="footer-link mt-4"><a class="text-primary text-decoration-none" href="#">Explore others</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="col mt-5 ms-7">
                 <img src="img/Rectangle 55.png" alt="" class="img-fluid col-md-8 ps-5">
@@ -63,28 +73,25 @@
     </div>
 
     <div class="container-fluid bg-primary">
-        <div class="row py-5 text-white">
+        <div class="row py-5 text-white ms-5">
             <h5 class="mb-3">Body Status</h5>
             <div class="col">
-                <p>Height 1.67m</p> 
+                <p>Height <span class="text-secondary">1.67m</span></p> 
             </div>
             <div class="col">
-                <p>Height 1.67m</p> 
+                <p>Waist <span class="text-secondary">13</span></p> 
             </div>
             <div class="col">
-                <p>Height 1.67m</p> 
+                <p>Shoe size <span class="text-secondary">10US</span></p> 
             </div>
             <div class="col">
-                <p>Height 1.67m</p> 
+                <p>Eye color <span class="text-secondary">Black</span></p> 
             </div>
             <div class="col">
-                <p>Height 1.67m</p> 
+                <p>Hair color <span class="text-secondary">Black</span></p> 
             </div>
-            <div class="col">
-                <p>Height 1.67m</p> 
-            </div>
-            <div class="col">
-                <p>Height 1.67m</p> 
+            <div class="col me-4">
+                <p>Ethnicity <span class="text-secondary">Nigeria,Lagos</span></p> 
             </div>
         </div>
     </div>
@@ -120,7 +127,7 @@
         <div class="row">
             <ul class="nav justify-content-center ">
                 <li class="nav-item ">
-                  <a class="nav-link active dark-link" aria-current="page" href="#">LONDON</a>
+                  <a class="nav-link dark-link" aria-current="page" href="#">LONDON</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link dark-link mx-5" href="#">LAGOS</a>
