--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                 </div>
             </div>
             <div class="col mt-5 ms-7">
-                <img src="img/Rectangle 55.png" alt="" class="img-fluid col-md-8 ps-5">
+                <img src="img/Rectangle 55.png" alt="" class="img-fluid col-md-8 ps-sm-5">
             </div>
         </div>
     </div>
 
     <div class="container-fluid bg-primary">
-        <div class="row py-5 text-white ms-5">
+        <div class="row py-5 text-white text-center">
             <h5 class="mb-3">Body Status</h5>
             <div class="col">
                 <p>Height <span class="text-secondary">1.67m</span></p> 
@@ -90,7 +90,7 @@
             <div class="col">
                 <p>Hair color <span class="text-secondary">Black</span></p> 
             </div>
-            <div class="col me-4">
+            <div class="col">
                 <p>Ethnicity <span class="text-secondary">Nigeria,Lagos</span></p> 
             </div>
         </div>
@@ -139,8 +139,8 @@
     </div>
 
     <div class="container-fluid bg-primary">
-        <div class="row text-white py-5 ">
-          <div class="col ms-6">
+        <div class="row text-white text-center ">
+          <div class="col">
             <ul class="footer-link p-0">
               <li>HOME</li>
               <li>WOMEN</li>
@@ -162,7 +162,7 @@
               <li>PRIVACY POLICY</li>
             </ul>
           </div>
-          <div class="col ms-5">
+          <div class="col">
                 <p>FOLLOW US</p>
                 <ul class="footer-link p-0">
                 <li><i class="fab fa-instagram me-2"></i>LONDON</li>
@@ -180,7 +180,7 @@
 
       <div class="container-fluid bg-primary">
         <div class="row">
-          <div class="col text-white ms-6">
+          <div class="col text-white text-center">
             <p>Copyright 2021 All Rights Reserved © Mahogany Model Management</p>
           </div>
         </div>
